[package]
name = "countries_cache"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picodata-plugin = "25.2.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
fibreq = { version = "0.1.8", features = ["picodata"] }
once_cell = "1.18.0"
shors = { version = "0.12.1", features = ["picodata"] }

[build-dependencies]
liquid = "0.26"
fs_extra = "1"

[lib]
crate-type = ["lib", "cdylib"]
